<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">ZegoWawaji</string>

    <string name="vt_menu_action_log">日志</string>
    <string name="vt_menu_action_clean">清除</string>
    <string name="vt_menu_action_leave">下线</string>
    <string name="vt_menu_action_test">测试</string>

    <string name="zg_text_use_test_env">使用测试环境</string>
    <string name="zg_text_quality_options">直播品质</string>
    <string name="zg_text_resolution_type_lowest">超低质量</string>
    <string name="zg_text_resolution_type_Low">低质量</string>
    <string name="zg_text_resolution_type_Standard">标准质量</string>
    <string name="zg_text_resolution_type_High">高质量</string>
    <string name="zg_text_resolution_type_Higher">超高质量</string>
    <string name="zg_text_resolution_type_Highest">特高质量</string>
    <string name="zg_text_resolution_type_Customize">自定义</string>

    <string name="encode_resolution_prefix">分辨率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="fps_prefix">帧率&#160;<xliff:g id="value">%1$s</xliff:g></string>
    <string name="bitrate_prefix">码率&#160;<xliff:g id="value">%1$s</xliff:g></string>

    <string name="vt_dialog_logout_message">现在下线会中断所有玩家的操作，确认下线？</string>
    <string name="vt_dialog_camera_device_anomaly">摄像头异常：采集不到数据</string>
    <string name="vt_dialog_btn_positive">确认</string>
    <string name="vt_dialog_btn_cancel">取消</string>

    <string name="zg_toast_login_room_failed">登录房间失败，稍后自动重试</string>
    <string name="zg_toast_reopen_app">修改完成后，需重启 App 才能生效</string>
    <string name="zg_toast_change_quality_success">修改成功，重新启动后生效</string>
    <string name="zg_toast_permission_denied">获取权限 %1$s 失败</string>
    <string name="zg_toast_load_config_failed">加载配置文件出错，请联系我们的技术支持人员</string>

    <string name="zg_text_current_user_id">当前用户ID: <b>%1$s</b></string>
    <string name="zg_text_current_room_id">当前房间ID: <b>%1$s</b></string>
    <string name="zg_text_current_total_user">共有 <b>%1$d</b> 人</string>
    <string name="zg_text_current_queue_user">排队人数 <b>%1$d</b></string>
    <string name="zg_text_current_player"><b>%1$s</b> 正在玩</string>
    <string name="zg_text_current_no_player">当前机器空闲</string>
    <string name="zg_text_current_device_state">设备状态&#160;<xliff:g id="value">%1$d</xliff:g></string>
    <string name="zg_text_device_error"><b><font color="#ff0000">设备未连接或者没有权限</font></b></string>
    <string name="zg_text_camera_error"><b><font color="#ff0000">摄像头故障&#160;<xliff:g id="value">%1$d</xliff:g></font></b></string>

    <string name="zg_text_front_stream_info"><strong>正面摄像头:</strong> %1$s</string>
    <string name="zg_text_side_stream_info"><strong>侧面摄像头:</strong> %1$s</string>
    <string name="zg_text_disable_camera_hint">摄像头被临时禁用</string>

    <string name="zg_text_wawaji_name_template">即构娃娃机%1$s</string>
</resources>
