<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zego.zegowawaji_server.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextureView
            android:id="@+id/main_preview_view"
            android:layout_width="160dp"
            android:layout_height="213dp"
            android:layout_marginRight="10dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/main_preview_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/main_preview_view"
            android:layout_alignBottom="@id/main_preview_view"
            android:layout_alignRight="@id/main_preview_view"
            android:layout_alignTop="@id/main_preview_view"
            android:gravity="center"
            android:text="@string/zg_text_disable_camera_hint"/>

        <TextView
            android:id="@+id/main_stream_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/main_preview_view"
            android:layout_alignRight="@id/main_preview_view"
            android:layout_below="@id/main_preview_view"
            android:layout_marginTop="2dp"
            android:textSize="11sp"/>

        <TextureView
            android:id="@+id/second_preview_view"
            android:layout_width="160dp"
            android:layout_height="213dp"
            android:layout_toRightOf="@id/main_preview_view"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/second_preview_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/second_preview_view"
            android:layout_alignBottom="@id/second_preview_view"
            android:layout_alignRight="@id/second_preview_view"
            android:layout_alignTop="@id/second_preview_view"
            android:gravity="center"
            android:text="@string/zg_text_disable_camera_hint"/>

        <TextView
            android:id="@+id/second_stream_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/second_preview_view"
            android:layout_alignRight="@id/second_preview_view"
            android:layout_below="@id/second_preview_view"
            android:layout_marginTop="2dp"
            android:textSize="11sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/zg_text_use_test_env"
                android:textSize="14.7sp"/>
            <CheckBox
                android:id="@+id/zg_use_test_env"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/zg_text_quality_options"
                android:textSize="14.7sp"/>
            <Spinner
                android:id="@+id/sp_resolutions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:entries="@array/zg_resolution_types">

            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_encode_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14.7sp"
                tools:text="@string/encode_resolution_prefix"/>

            <com.zego.base.widget.CustomSeekBar
                android:id="@+id/sb_resolution"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_fps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14.7sp"
                tools:text="@string/fps_prefix"/>

            <com.zego.base.widget.CustomSeekBar
                android:id="@+id/sb_fps"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14.7sp"
                tools:text="@string/bitrate_prefix"/>

            <com.zego.base.widget.CustomSeekBar
                android:id="@+id/sb_bitrate"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/zg_current_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="14.7sp"/>

        <TextView
            android:id="@+id/zg_current_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:textSize="14.7sp"/>

        <TextView
            android:id="@+id/zg_current_total_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@id/zg_current_user_id"
            android:layout_alignParentLeft="true"
            android:textSize="14.7sp"/>

        <TextView
            android:id="@+id/zg_current_queue_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@id/zg_current_room_id"
            android:layout_alignLeft="@id/zg_current_room_id"
            android:textSize="14.7sp"/>

        <TextView
            android:id="@+id/zg_current_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@id/zg_current_total_user"
            android:layout_alignParentLeft="true"
            android:textSize="14.7sp"/>

        <TextView
            android:id="@+id/zg_current_device_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_below="@id/zg_current_queue_user"
            android:layout_alignLeft="@id/zg_current_queue_user"
            android:textSize="14.7sp"/>
    </RelativeLayout>

</LinearLayout>
